Update pom.xml add maven publish config